[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls"}
leafwing-input-manager = "0.6.1"
perlin2d = "0.2.6"
rand = "0.8.5"
bevy_ecs_tilemap = { version = "0.8.0"}
chunked-tilemap = { path = "../chunked-tilemap" }